[gd_scene load_steps=6 format=3 uid="uid://cjhj5oq6bo6mq"]

[ext_resource type="PackedScene" uid="uid://bcfs7nljoccss" path="res://scenes/game/bossfight/components/joke_typing.tscn" id="1_fu3yb"]
[ext_resource type="Script" path="res://scenes/game/bossfight/bossfight.gd" id="1_h1yt4"]
[ext_resource type="PackedScene" uid="uid://brptrqp46bq11" path="res://scenes/game/bossfight/components/boss_face.tscn" id="1_vme5d"]
[ext_resource type="PackedScene" uid="uid://c0nicki1o5tox" path="res://scenes/game/bossfight/components/feather.tscn" id="3_ltypo"]
[ext_resource type="PackedScene" uid="uid://qv7886gfd6lc" path="res://scenes/game/bossfight/components/face_clicker.tscn" id="4_diejx"]

[node name="Bossfight" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h1yt4")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="BossFace" parent="." instance=ExtResource("1_vme5d")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.108025
anchor_right = 0.75
anchor_bottom = 0.614198
metadata/_edit_use_anchors_ = true

[node name="JokeTyping" parent="." instance=ExtResource("1_fu3yb")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.725309
anchor_right = 0.7
anchor_bottom = 0.878086
metadata/_edit_use_anchors_ = true

[node name="Feather" parent="." instance=ExtResource("3_ltypo")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0989583
anchor_top = 0.290123
anchor_right = 0.201389
anchor_bottom = 0.532407
metadata/_edit_use_anchors_ = true

[node name="FaceClicker" parent="." instance=ExtResource("4_diejx")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.775174
anchor_top = 0.541667
anchor_right = 0.94184
anchor_bottom = 0.868827
metadata/_edit_use_anchors_ = true

[connection signal="inserted_right_word" from="JokeTyping" to="." method="_on_joke_typing_inserted_right_word"]
[connection signal="finished_tickling" from="Feather" to="." method="_on_feather_finished_tickling"]
[connection signal="tickled" from="Feather" to="." method="_on_feather_tickled"]
[connection signal="face_status_changed" from="FaceClicker" to="." method="_on_face_clicker_face_status_changed"]
